Add basic Graph Controllers
